[gd_scene load_steps=2 format=1]

[ext_resource path="res://AcctMgr.gd" type="Script" id=1]

[node name="AcctMgr" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 766.0
margin/bottom = 548.0
script/script = ExtResource( 1 )

[node name="select" type="VScrollBar" parent="."]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 14.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 28.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = true
custom_step = -1.0

[node name="newAccount" type="Button" parent="."]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 24.0
margin/right = 140.0
margin/bottom = 0.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Create Account"
flat = false

[node name="delAccount" type="Button" parent="."]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 24.0
margin/right = 290.0
margin/bottom = 0.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Delete Account"
flat = false

[connection signal="value_changed" from="select" to="." method="onSelectAcct"]

[connection signal="pressed" from="newAccount" to="." method="onCreateAcct"]

[connection signal="pressed" from="delAccount" to="." method="onDeleteAcct"]


